fix:alignment changed

--- a/src/app/sort-by-date/sort-by-date.component.css
+++ b/src/app/sort-by-date/sort-by-date.component.css
@@ -2,10 +2,12 @@
     background-color: #f8fafc;
     border-radius: 8px;
     text-transform: none;
-    padding: 6px 12px;
+    /* padding: 6px 12px; */
     min-width: 180px;
     color: #374151; 
     border: 1px solid #e5e7eb;
+    margin-left: 16px;
+    
   }
   
   .sort-content {
